# tree-sitter-go-template

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  go.mod  go.sum  grammar.js  make_grammar.js  package-lock.json  package.json  shell.nix  tree-sitter.json
.github/workflows/: ci.yaml
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
dialects/helm/: grammar.js
dialects/helm/src/: grammar.json  node-types.json  parser.c
ftplugin/: helm.lua
lua/tree-sitter-go-template/: init.lua
queries/: highlights.scm  injections.scm
queries/gotmpl/: highlights.scm
queries/helm/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/: corpus_test.go  go.mod  go.sum  smoke_test.go
test/corpus/: actions.txt  arguments.txt  examples.txt  literals.txt  pipelines.txt  text.txt  variables.txt
