[package]
name = "tree-sitter-go-template"
description = "Go template grammar for the tree-sitter"
version = "0.19.5"
authors = [
    "Nikita Galaiko <nikita@galaiko.rocks>",
]
keywords = ["incremental", "parsing", "go-template"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ngalaiko/tree-sitter-go-template"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
